# pgvector-Learning-Project

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
api/: Dockerfile.dev
compose/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/api/: Dockerfile  Dockerfile.dev
docker/ui/: Dockerfile  Dockerfile.dev  nginx.conf
docs/: api.md  architecture.md
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py
scripts/: init_db.py  query_examples.py  run_agent.py  run_api_dev.py  seed_db.py
src/: config.py  logger.py
src/agents/: __init__.py  graph.py  org_matcher.py  state.py  supervisor.py  tool_finder.py  tools.py  workflow_advisor.py
src/api/: app.py
src/api/routes/: agent.py  threads.py
src/db/: checkpointer.py  connection.py  schema.py  threads.py
src/db/models/: __init__.py  base.py  checkpoint.py  message.py  organization.py  thread.py  tool.py
src/embeddings/: openai_embed.py
src/queries/: similarity.py
src/retrievers/: orgs_retriever.py  tools_retriever.py
src/seed/: clinical_data.py  run_seed.py
tests/integration/: test_api_e2e.py
ui/: vite.config.ts
ui/src/: App.tsx
ui/src/components/: Chat.tsx  Sidebar.tsx
ui/src/hooks/: useThreads.ts
ui/src/types/: thread.ts
